veecle-osal-std-macros/tests/ui/not_async.stderr
error: function must be `async`
 --> tests/ui/not_async.rs:2:1
  |
2 | fn main() {}
  | ^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/not_async.rs:2:13
  |
2 | fn main() {}
  |             ^ consider adding a `main` function to `$DIR/tests/ui/not_async.rs`
