veecle-osal-std-macros/tests/ui/not_async.rs
#[veecle_osal_std_macros::main]
fn main() {}
